<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateClassActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/create_new_class_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:ems="10"
            android:hint="@string/course_name"
            android:inputType="text"
            android:paddingVertical="16dp" />

        <TextView
            android:id="@+id/textVie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/exam_start_time"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pickDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:layout_weight="1"/>

            <View
                android:layout_width="16dp"
                android:layout_height="0dp"
                android:layout_weight="0" />

            <Button
                android:id="@+id/pickTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_time"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/duration"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectHourButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_hours"
                android:layout_weight="1"/>

            <View
                android:layout_width="16dp"
                android:layout_height="0dp"
                android:layout_weight="0" />

            <Button
                android:id="@+id/selectMinuteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_minutes"
                android:layout_weight="1"/>

        </LinearLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/open_materials"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/buttonViewFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/view_files"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLarge" />
    </FrameLayout>
</FrameLayout>
