<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/button_my_classes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="24dp"
        android:text="@string/home_my_classes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_create_new_class"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_create_new_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_my_classes" />

    <Button
        android:id="@+id/button_join_a_class"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_join_a_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_new_class" />

    <Button
        android:id="@+id/button_my_files"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_my_files"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_join_a_class" />

</androidx.constraintlayout.widget.ConstraintLayout>